<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv_date_label"
                android:text="@string/item_weather_day_text_date"
                style="@style/AppTheme.CardView.Text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/tv_date"
                style="@style/AppTheme.CardView.Text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_date_label"
                tools:text="@tools:sample/date/ddmmyy"/>

        <TextView
                android:id="@+id/tv_day_label"
                android:text="@string/item_weather_day_text_day"
                style="@style/AppTheme.CardView.Text"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_label"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/tv_day"
                style="@style/AppTheme.CardView.Text"
                app:layout_constraintTop_toBottomOf="@+id/tv_date"
                app:layout_constraintStart_toEndOf="@+id/tv_day_label"
                tools:text="@tools:sample/us_zipcodes"/>

        <TextView
                android:id="@+id/tv_min_label"
                android:text="@string/item_weather_day_text_min"
                style="@style/AppTheme.CardView.Text"
                app:layout_constraintTop_toBottomOf="@+id/tv_day_label"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/tv_min"
                style="@style/AppTheme.CardView.Text"
                app:layout_constraintTop_toBottomOf="@+id/tv_day"
                app:layout_constraintStart_toEndOf="@+id/tv_min_label"
                tools:text="@tools:sample/us_zipcodes"/>

        <TextView
                android:id="@+id/tv_max_label"
                android:text="@string/item_weather_day_text_max"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/AppTheme.CardView.Text"
                app:layout_constraintTop_toBottomOf="@+id/tv_min_label"/>

        <TextView
                android:id="@+id/tv_max"
                style="@style/AppTheme.CardView.Text"
                app:layout_constraintTop_toBottomOf="@+id/tv_min"
                app:layout_constraintStart_toEndOf="@+id/tv_max_label"
                tools:text="@tools:sample/us_zipcodes"/>

        <TextView
                android:id="@+id/tv_weather_label"
                android:text="@string/item_weather_day_text_weather"
                style="@style/AppTheme.CardView.Text"
                app:layout_constraintTop_toBottomOf="@+id/tv_max_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="@dimen/margin_8"/>

        <TextView
                android:id="@+id/tv_weather"
                style="@style/AppTheme.CardView.Text"
                app:layout_constraintTop_toBottomOf="@+id/tv_max"
                app:layout_constraintStart_toEndOf="@+id/tv_weather_label"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/margin_8"
                tools:text="@tools:sample/lorem"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>